--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-text-to-speech": "^0.6.6"
   },
   "devDependencies": {
