--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.29",
+    "framer-motion": "^11.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
